force-app/main/default/objects/Quote_Request_Claim_Summary__c.object
<CustomObject>
    <description>Summary For Imported Claim History</description>
    <fields>
        <fullName>Average_Enrolled_Members__c</fullName>
        <label>Average Enrolled Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Enrolled_Subscribers__c</fullName>
        <label>Average Enrolled Subscribers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billed_Premium__c</fullName>
        <label>Billed Premium</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capitation__c</fullName>
        <label>Capitation</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Claims__c</fullName>
        <label>Claims</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Experience_Period_From__c</fullName>
        <label>Experience Period From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Experience_Period_Through__c</fullName>
        <label>Experience Period Through</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>High_Level_Claims__c</fullName>
        <label>High Level Claims</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Medical_Loss_Ratio__c</fullName>
        <formula>(Billed_Premium__c - (Claims__c +  Capitation__c ))  /  Billed_Premium__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Medical Loss Ratio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Quote Request Claim Summary</relationshipLabel>
        <relationshipName>Quote_Request_Claim_Summary</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>RX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Quote Request Claim Summary</label>
    <nameField>
        <displayFormat>QRC-{0000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Request Claim Summary</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>